--- a/src/style/_slate-layout.scss
+++ b/src/style/_slate-layout.scss
@@ -1,16 +1,156 @@
+.swagger-ui-content-wrapper {
+    padding-left: 210px;
+}
 .swagger-ui-content-container
 {
-    margin-left: 15rem;
+    position: relative;
     min-width: 550px;
-    max-width: 1150px;
+    width: 100%;
+    &:before {
+        content: "";
+        background: #5c666f;
+        height: 100%;
+        width: 50%;
+        top: 0;
+        right: 0;
+        position: absolute;
+        z-index: -1;
+    }
 
     @media (min-width: 1400px) {
     }
     @media (min-width: 992px) {
     }
-}
 
-h2 pre.version
-{
-    line-height: 2em;
+    .info {
+        background: #FFF;
+        width: 50%;
+        .main {
+            padding: 1em;
+        }
+        .description {
+            padding: 1em;
+        }
+    }
+
+    .slate-operations {
+        .slate-header-tag {
+        }
+        .slate-operations-wrapper {
+            .slate-operation {
+                &:before {
+                    content: "";
+                    display: table;
+                    box-sizing: border-box;
+                }
+                &:after {
+                    content: "";
+                    display: block;
+                    clear: both;
+                    box-sizing: border-box;
+                }
+                min-height: 100vh;
+                border-top: 1px solid rgba(0,0,0,.08);
+                margin: 0 0 30px;
+                .slate-operation-content {
+                    padding: 1em;
+                    position: relative;
+                    float: left;
+                    width: 50%;
+                    .opblock-description-wrapper {
+                        margin: 0;
+                        padding: 20px 0 0;
+                        color: #333;
+                        font-size: .95em;
+                    }
+                }
+                .slate-operation-samples {
+                    float: left;
+                    width: 50%;
+                    .schema-sample-container {
+                        .title {
+                            padding: 10px 10px;
+                        }
+                        .content {
+                            padding: 0
+                        }
+                        .sample-content {
+                            background: #4e575e;
+                            margin: 0;
+                            word-wrap: break-word !important;
+                            padding: 10px;
+                        }
+                        .accordion {
+                            margin: 0;
+                        }
+                    }
+                }
+                .slate-heading {
+                    color: #333;
+                    h2.slate-operation-title {
+                        font-family: 'Helvetica Neue',Arial,Helvetica,sans-serif;
+                        font-size: 32px;
+                        font-weight: 100;
+                        line-height: 1;
+                        margin: 0 0 10px;
+                    }
+
+                    h3 {
+                        margin: 0;
+                        font-weight: normal;
+                    }
+
+                    .slate-http_method {
+                        display: table-cell;
+                        a {
+                            color: #fff;
+                            text-transform: uppercase;
+                            font-size: 11px;
+                            border-radius: 20px;
+                            padding: 2px 10px;
+                            font-weight: 700;
+                            display: inline-block;
+                        }
+                    }
+
+                    .slate-path {
+                        display: table-cell;
+                        padding-left: 10px;
+                    }
+
+                    &.get {
+                        .slate-http_method {
+                            a, span {
+                                background: #2392f7
+                            }
+                        }
+                    }
+
+                    &.post {
+                        .slate-http_method {
+                            a, span {
+                                background: #13c20f
+                            }
+                        }
+                    }
+
+                    &.delete {
+                        .slate-http_method {
+                            a, span {
+                                background: #e30012
+                            }
+                        }
+                    }
+
+                    &.patch {
+                        .slate-http_method {
+                            a, span {
+                                background: #ff9a57
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
 }
