--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,20 +1,6 @@
 .swagger-ui
 {
-    @import 'mixins';
-    @import 'variables';
-    @import 'colors';
-    @import 'type';
-    @import 'layout';
-    @import 'buttons';
-    @import 'form';
-    @import 'modal';
-    @import 'models';
-    @import 'table';
-    @import 'topbar';
-    @import 'information';
-    @import 'authorize';
-    @import 'errors';
-    @include text_body();
-    @import 'split-pane-mode';
     @import 'slate-layout';
+    @import 'slate-layout-markdown';
+    @import 'slate-layout-highlight';
 }
